<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.nutrition.NutritiousFoodActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_marginStart="20dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            tools:ignore="ContentDescription"
            android:src="@drawable/baseline_arrow_back_ios_24"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/nutritions_infor"
            />
    </androidx.appcompat.widget.Toolbar>
    <View
        android:id="@+id/line"
        android:layout_below="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />
    <LinearLayout
        android:id="@id/linear2"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:layout_below="@id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:theme="@style/InPutTheme"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:id="@+id/species_layout"
                android:layout_width="match_parent"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:hint="@string/species"
                app:hintTextColor="@color/green"
                app:boxStrokeColor="@color/green"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:labelFor="@id/foot_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:id="@+id/species"
                    android:cursorVisible="false"
                    android:focusable="false"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/foot_type_layout"
                android:layout_width="match_parent"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:hint="@string/food_type"
                android:layout_marginVertical="10dp"
                app:hintTextColor="@color/green"
                app:boxStrokeColor="@color/green"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:labelFor="@id/foot_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:id="@+id/foot_type"
                    android:cursorVisible="false"
                    android:focusable="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:hint="@string/search"
                app:hintTextColor="@color/green"
                app:boxStrokeColor="@color/green"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:drawableStart="@drawable/baseline_search_24"
                    android:id="@+id/search"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_below="@+id/linear2"
        android:id="@+id/line1"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/line1"
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>