<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".fragments.LibraryFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:src="@drawable/pet_app_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/library_disease"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/tool_bar_underline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@id/tool_bar"
        android:background="@android:color/darker_gray"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/linear1"
        android:orientation="vertical"
        android:theme="@style/InPutTheme"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/tool_bar_underline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/species"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"       android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/species"
                android:focusable="false"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:boxStrokeColor="@color/green"
            app:hintTextColor="@color/green"
            android:layout_marginTop="10dp"
            android:hint="@string/search"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_input"
                android:drawableStart="@drawable/baseline_search_24"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/line4"
        android:layout_below="@+id/linear1"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/line4"
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>