<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".activity.pet.PetDetailsActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_marginStart="20dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            tools:ignore="ContentDescription"
            android:src="@drawable/baseline_arrow_back_ios_24"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/detail_pet"
            />
        <ImageView
            android:id="@+id/btn_update_pet"
            tools:ignore="ContentDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_edit_24"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            />
    </androidx.appcompat.widget.Toolbar>
    <View
        android:id="@+id/line"
        android:layout_below="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />
    <ScrollView
        android:layout_below="@id/line"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_pet"
                android:scaleType="fitXY"
                android:src="@drawable/background_login"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                tools:ignore="ContentDescription"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="-20dp"
                android:background="@drawable/bg_add_pet_form"
                android:layout_width="match_parent"
                android:paddingHorizontal="20dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/name_pet"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_pet"
                        android:textSize="25sp"
                        />
                    <TextView
                        android:id="@+id/breed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breed"
                        />
                </LinearLayout>
                <com.google.android.material.tabs.TabLayout
                    android:background="@drawable/bg_item_custom"
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    app:tabSelectedTextColor="@color/white"
                    app:tabTextColor="@color/black"
                    app:tabMode="fixed"
                    app:tabIndicatorFullWidth="true"
                    app:tabIndicatorHeight="30dp"
                    app:tabIndicator="@drawable/tab_layout_custom"
                    app:tabIndicatorGravity="center"
                    app:tabIndicatorColor="@color/green"
                    app:tabIndicatorAnimationMode="linear"
                    android:layout_height="wrap_content"/>
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/green"
        android:src="@drawable/baseline_add_24"
        android:tint="@color/white"
        tools:ignore="ContentDescription" />
</RelativeLayout>