<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.pet.UpdatePetActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_marginStart="20dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            tools:ignore="ContentDescription"
            android:src="@drawable/baseline_arrow_back_ios_24"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/update_pet"
            />
    </androidx.appcompat.widget.Toolbar>
    <View
        android:id="@+id/line"
        android:layout_below="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        />
    <ScrollView
        android:layout_below="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="280dp">
                <ImageView
                    android:id="@+id/image_pet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/gray_pet_image"
                    tools:ignore="ContentDescription"
                    />
                <ImageView
                    android:id="@+id/camera"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_camera_alt_24"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="25dp"
                    android:layout_marginEnd="10dp"
                    tools:ignore="ContentDescription"
                    />
            </RelativeLayout>
            <LinearLayout
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:background="@drawable/bg_add_pet_form"
                android:layout_marginTop="-20dp"
                android:theme="@style/InPutTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/name_pet"
                    android:layout_marginTop="20dp"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/green"
                    app:boxStrokeColor="@color/green"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_pet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:boxStrokeColor="@color/green"
                    app:boxStrokeErrorColor="@color/green"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    app:hintTextColor="@color/green"
                    android:hint="@string/species"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/species"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    app:boxStrokeColor="@color/green"
                    app:boxStrokeErrorColor="@color/green"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    app:hintTextColor="@color/green"
                    android:hint="@string/breed"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/breed"
                        android:inputType="none"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/date_of_birth"
                    android:layout_marginTop="20dp"
                    app:hintTextColor="@color/green"
                    app:boxStrokeColor="@color/green"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:drawableEnd="@drawable/baseline_date_range_24"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:weightSum="3"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/gender"
                        android:textSize="20sp"
                        android:layout_gravity="center_vertical"
                        />
                    <RadioGroup
                        android:id="@+id/gender"
                        android:theme="@style/Base.Theme.PetManagement"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/male"
                            android:buttonTint="@color/radiobuton_selector"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="Đực"
                            android:textSize="16sp"
                            />
                        <RadioButton
                            android:id="@+id/female"
                            android:buttonTint="@color/radiobuton_selector"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="Cái"
                            android:textSize="16sp"
                            />
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:weightSum="3"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="Triệt sản"
                        android:textSize="20sp"
                        android:layout_gravity="center_vertical"
                        tools:ignore="HardcodedText" />
                    <RadioGroup
                        android:id="@+id/neutered"
                        android:theme="@style/Base.Theme.PetManagement"
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/entire"
                            android:buttonTint="@color/radiobuton_selector"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="Chưa"
                            android:textSize="16sp"
                            tools:ignore="HardcodedText" />
                        <RadioButton
                            android:id="@+id/neuter"
                            android:buttonTint="@color/radiobuton_selector"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="Rồi"
                            tools:ignore="HardcodedText"
                            android:textSize="16sp"
                            />
                    </RadioGroup>

                </LinearLayout>
                <Button
                    android:id="@+id/btn_update"
                    android:textColor="@color/white"
                    android:background="@drawable/green_background_button"
                    android:layout_marginVertical="20dp"
                    android:textAllCaps="false"
                    android:text="@string/update_pet"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>